Broker:
- Fix $SYS messages being expired after 60 seconds and hence unchanged values
  disappearing.
- Fix some retained topic memory not being cleared immediately after used.
- Fix error handling related to the `bind_interface` option.
- Fix std* files not being redirected when daemonising, when built with
  assertions removed. Closes #2708.

Client library:
- Use CLOCK_BOOTTIME when available, to keep track of time. This solves the
  problem of the client OS sleeping and the client hence not being able to
  calculate the actual time for keepalive purposes. Closes #2760.

Clients:
- Fix incorrect topic-alias property value in mosquitto_sub json output.


2.0.15 - 2022-08-16
===================

Security:
- Deleting the group configured as the anonymous group in the Dynamic Security
  plugin, would leave a dangling pointer that could lead to a single crash.
  This is considered a minor issue - only administrative users should have
  access to dynsec, the impact on availability is one-off, and there is no
  associated loss of data. It is now forbidden to delete the group configured
  as the anonymous group.

Broker:
- Fix memory leak when a plugin modifies the topic of a message in
  MOSQ_EVT_MESSAGE.
- Fix bridge `restart_timeout` not being honoured.
- Fix potential memory leaks if a plugin modifies the message in the
  MOSQ_EVT_MESSAGE event.
- Fix unused flags in CONNECT command being forced to be 0, which is not
  required for MQTT v3.1. Closes #2522.
- Improve documentation of `persistent_client_expiration` option.
  Closes #2404.
- Add clients to session expiry check list when restarting and reloading from
  persistence. Closes #2546.
- Fix bridges not sending failure notification messages to the local broker if
  the remote bridge connection fails. Closes #2467. Closes #1488.
- Fix some PUBLISH messages not being counted in $SYS stats. Closes #2448.
- Fix incorrect return code being sent in DISCONNECT when a client session is
  taken over. Closes #2607.